--- a/caixa.html
+++ b/caixa.html
@@ -18,6 +18,7 @@
             <li><a href="relatorio.html"><i class="fas fa-chart-line"></i> Relatórios</a></li>
             <li><a href="estoque.html"><i class="fas fa-boxes"></i> Estoque</a></li>
             <li><a href="configuracoes.html"><i class="fas fa-cog"></i> Configurações</a></li>
+            <li><a href="usuario.html"><i class="fa-solid fa-users"></i> Usuários</a></li>
             <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Sair</a></li>
         </ul>
     </div>
