--- a/garcom.html
+++ b/garcom.html
@@ -23,12 +23,11 @@
             <li><a href="relatorio.html"><i class="fas fa-chart-line"></i> Relatórios</a></li>
             <li><a href="estoque.html"><i class="fa-solid fa-circle-info"></i> Estoque</a></li>
             <li><a href="configuracoes.html"><i class="fas fa-cog"></i> Configurações</a></li>
+            <li><a href="usuario.html"><i class="fa-solid fa-users"></i> Usuários</a></li>
             <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Sair</a></li>
         </ul>
     </div>
 
-    <!-- Conteúdo Principal -->
-    <div class="caixatela2">
         <!-- Botões de Mesas -->
         <div class="botoes-laterais">
             <h2><i class="fas fa-table"></i> Mesas</h2>
@@ -67,6 +66,5 @@
             <button class="botao-finalizar" onclick="finalizarPedido()"><i class="fas fa-check"></i> Finalizar Pedido</button>
         </div>
     </div>
-    <script type="module" src="main-garcom.js"></script>
 </body>
 </html>
